corrección: faltaba ruta img/img.jpg

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <figure>
-            <img src="logo-mdhl.png" alt="Mighty Ducks Logo" width="120px">
+            <img src="img/logo-mdhl.png" alt="Mighty Ducks Logo" width="120px">
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
@@ -20,7 +20,7 @@
     </header>
     <main>
         <figure>
-            <img src="hockey-1.jpg" alt="" width="150px">
+            <img src="img/hockey-1.jpg" alt="" width="150px">
         </figure>
         <section>
             <h2>Upcoming Events</h2>
