--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <figure>
-            <img src="img/logo-mdhl.png" alt="Mighty Ducks Logo" width="120px">
+            <img src="./assets/img/logo-mdhl.png" alt="Mighty Ducks Logo" width="120px">
         </figure>
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
@@ -21,7 +21,7 @@
     </header>
     <main>
         <figure>
-            <img src="img/hockey-3.jpg" alt="" width="150px">
+            <img src="./assets/img/hockey-3.jpg" alt="" width="150px">
         </figure>
         <article>
             <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
