--- a/index.html
+++ b/index.html
@@ -8,23 +8,20 @@
     <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
-    <header>
-        <figure>
-            <img src="./assets/img/logo-mdhl.png" alt="Mighty Ducks Logo" width="120px">
-        </figure>
+    <header class="header">
         <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="./about.html">About MDHL</a>
-            <a href="./contact.html">Contact</a>
-        </nav>
+        <h2 class="titulo2">Upcoming Events</h2>
+        <img src="./assets/img/logo-mdhl.png" alt="Mighty Ducks Logo" class="logo">
     </header>
     <main>
-        <figure>
-            <img src="./assets/img/hockey-1.jpg" alt="" width="150px">
-        </figure>
+        <nav>
+            <ul class="lista-links">
+                <li><a href="#" class="menu">Home</a></li>
+                <li><a href="./about.html" class="menu">About MDHL</a></li>
+                <li><a href="./contact.html" class="menu">Contact</a></li>
+            </ul>  
+        </nav>   
         <section>
-            <h2>Upcoming Events</h2>
             <ul>
                 <li>
                     <h3>August 4</h3>
@@ -36,15 +33,13 @@
                 </li>
                 <li>
                     <h3>September 1</h3>
-                    <p>First Game of the Season (Check Game Schedule for details)
-</p>
+                    <p>First Game of the Season (Check Game Schedule for details)</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-
+        
     </footer>
-    
 </body>
 </html>
