--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,21 +10,19 @@
 </head>
 
 <body>
-    <header>
-        <figure>
-            <img src="./assets/img/logo-mdhl.png" alt="Mighty Ducks Logo" width="120px">
-        </figure>
+    <header class="header">
         <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="./index.html">Home</a>
-            <a href="#">About MDHL</a>
-            <a href="./contact.html">Contact</a>
-        </nav>
+        <h2 class="titulo2">Upcoming Events</h2>
+        <img src="./assets/img/logo-mdhl.png" alt="Mighty Ducks Logo" class="logo">
     </header>
     <main>
-        <figure>
-            <img src="./assets/img/hockey-2.jpg" alt="" width="150px">
-        </figure>
+        <nav>
+            <ul class="lista-links">
+                <li><a href="./index.html" class="menu">Home</a></li>
+                <li><a href="#" class="menu">About MDHL</a></li>
+                <li><a href="./contact.html" class="menu">Contact</a></li>
+            </ul>
+        </nav>
         <section>
             <article>
                 <h3>Mision</h3>
@@ -46,6 +45,9 @@
             </article>
         </section>
     </main>
+    <footer>
+
+    </footer>
 
 </body>
 
