--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,26 +10,29 @@
 </head>
 
 <body>
-    <header>
-        <figure>
-            <img src="./assets/img/logo-mdhl.png" alt="Mighty Ducks Logo" width="120px">
-        </figure>
+    <header class="header">
         <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="./index.html">Home</a>
-            <a href="./about.html">About MDHL</a>
-            <a href="#">Contact</a>
-        </nav>
+        <h2 class="titulo2">Upcoming Events</h2>
+        <img src="./assets/img/logo-mdhl.png" alt="Mighty Ducks Logo" class="logo">
     </header>
     <main>
-        <figure>
-            <img src="./assets/img/hockey-3.jpg" alt="" width="150px">
-        </figure>
-        <article>
+        <nav>
+            <ul class="lista-links">
+                <li><a href="./index.html" class="menu">Home</a></li>
+                <li><a href="./about.html" class="menu">About MDHL</a></li>
+                <li><a href="#" class="menu">Contact</a></li>
+            </ul>
+        </nav>
+        <section>
+            <article>
             <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
             <p>We reply to your email as soon as we can.</p>
-        </article>
+            </article>
+        </section>
     </main>
+    <footer>
+
+    </footer>
 
 </body>
 
