--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style-2.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 
 <body>
     <header class="header">
         <h1>Mighty Ducks Hockey League</h1>
-        <h2 class="titulo2">Upcoming Events</h2>
+        <h2 class="titulo2">Contact</h2>
         <img src="./assets/img/logo-mdhl.png" alt="Mighty Ducks Logo" class="logo">
     </header>
     <main>
@@ -20,7 +20,7 @@
             <ul class="lista-links">
                 <li><a href="./index.html" class="menu">Home</a></li>
                 <li><a href="./about.html" class="menu">About MDHL</a></li>
-                <li><a href="#" class="menu">Contact</a></li>
+                <li><a href="#" class="menu pag-actual">Contact</a></li>
             </ul>
         </nav>
         <section>
