--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style-2.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     <main>
         <nav>
             <ul class="lista-links">
-                <li><a href="#" class="menu">Home</a></li>
+                <li><a href="#" class="menu pag-actual">Home</a></li>
                 <li><a href="./about.html" class="menu">About MDHL</a></li>
                 <li><a href="./contact.html" class="menu">Contact</a></li>
             </ul>  
