nav movido a header

--- a/about.html
+++ b/about.html
@@ -14,15 +14,15 @@
         <h1>Mighty Ducks Hockey League</h1>
         <h2 class="titulo2">About</h2>
         <img src="./assets/img/logo-mdhl.png" alt="Mighty Ducks Logo" class="logo">
-    </header>
-    <main>
         <nav>
             <ul class="lista-links">
-                <li><a href="./index.html" class="menu">Home</a></li>
-                <li><a href="#" class="menu pag-actual">About MDHL</a></li>
+                <li><a href="#" class="menu pag-actual">Home</a></li>
+                <li><a href="./about.html" class="menu">About MDHL</a></li>
                 <li><a href="./contact.html" class="menu">Contact</a></li>
             </ul>
         </nav>
+    </header>
+    <main>
         <section>
             <article>
                 <h3>Mision</h3>
