--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style-2.css">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
@@ -17,6 +17,9 @@
                 <li><a href="#" class="menu pag-actual">Home</a></li>
                 <li><a href="./about.html" class="menu">About MDHL</a></li>
                 <li><a href="./contact.html" class="menu">Contact</a></li>
+                <li><a href="./game-info.html" class="menu">Games Info</a></li>
+                <li><a href="./rules.html" class="menu">Rules &amp; Policies</a></li>
+                <li><a href="./registration.html" class="menu">Registration form</a></li>
             </ul>
         </nav>
     </header>
