--- a/registration.html
+++ b/registration.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +7,10 @@
     <link rel="stylesheet" href="./style/style.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
-
 <body>
     <header class="header">
         <h1>Mighty Ducks Hockey League</h1>
-        <h2 class="titulo2">Contact</h2>
+        <h2 class="titulo2">Upcoming Events</h2>
         <img src="./assets/img/logo-mdhl.png" alt="Mighty Ducks Logo" class="logo">
         <nav>
             <ul class="lista-links">
@@ -27,16 +25,24 @@
     </header>
     <main>
         <section>
-            <article>
-            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-            <p>We reply to your email as soon as we can.</p>
-            </article>
+            <ul>
+                <li>
+                    <h3>August 4</h3>
+                    <p>MDSL Fundraiser</p>
+                </li>
+                <li>
+                    <h3>August 16</h3>
+                    <p>Season Kick-off: Meet the Teams</p>
+                </li>
+                <li>
+                    <h3>September 1</h3>
+                    <p>First Game of the Season (Check Game Schedule for details)</p>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
-
+        
     </footer>
-
 </body>
-
 </html>
