estilos css reiniciados - mapas añadidos en game-info.html

--- a/about.html
+++ b/about.html
@@ -5,28 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style-3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 
 <body>
     <header class="header">
-        <h1>Mighty Ducks Hockey League</h1>
-        <h2 class="titulo2">About</h2>
         <img src="./assets/img/logo-mdhl.png" alt="Mighty Ducks Logo" class="logo">
+        <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <ul class="lista-links">
-                <li><a href="./index.html" class="menu pag-actual">Home</a></li>
-                <li><a href="./about.html" class="menu">About MDHL</a></li>
+                <li><a href="./index.html" class="menu">Home</a></li>
+                <li><a href="./about.html" class="menu pag-actual">About MDHL</a></li>
                 <li><a href="./contact.html" class="menu">Contact</a></li>
                 <li><a href="./game-info.html" class="menu">Games Info</a></li>
                 <li><a href="./rules.html" class="menu">Rules &amp; Policies</a></li>
-                <li><a href="./registration.html" class="menu">Registration form</a></li>
+                <li><a href="./registration.html" class="menu">Registration</a></li>
             </ul>
         </nav>
     </header>
+    <section class="banner-about"></section>
     <main>
         <section>
+            <h2 class="titulo2">About</h2>
             <article>
                 <h3>Mision</h3>
                 <p>   To support young athletes living Chicago's northside neighborhood, who have an interest in
