--- a/game-info.html
+++ b/game-info.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style-3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
     <header class="header">
-        <h1>Mighty Ducks Hockey League</h1>
-        <h2 class="titulo2">Games Information</h2>
         <img src="./assets/img/logo-mdhl.png" alt="Mighty Ducks Logo" class="logo">
+        <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <ul class="lista-links">
-                <li><a href="./index.html" class="menu pag-actual">Home</a></li>
+                <li><a href="./index.html" class="menu">Home</a></li>
                 <li><a href="./about.html" class="menu">About MDHL</a></li>
                 <li><a href="./contact.html" class="menu">Contact</a></li>
-                <li><a href="./game-info.html" class="menu">Games Info</a></li>
+                <li><a href="./game-info.html" class="menu pag-actual">Games Info</a></li>
                 <li><a href="./rules.html" class="menu">Rules &amp; Policies</a></li>
-                <li><a href="./registration.html" class="menu">Registration form</a></li>
+                <li><a href="./registration.html" class="menu">Registration</a></li>
             </ul>
         </nav>
     </header>
+    <section class="banner-info"></section>
     <main>   
         <section>
+            <h2 class="titulo2">Games Information</h2>
                     <h3>Fall Schedule</h3>
                     <p class="comentario">* All games take place on Saturday.</p>
 
@@ -41,51 +42,78 @@
                             <tr>
                                 <td rowspan="2">9/01</td>
                                 <td>U1 and U4</td>
-                                <td>AJ Katzenmaier</td>
+                                <td>AJ Katzenmaier <br><iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5899.561305062097!2d-87.862805!3d42.325877!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1675837712277!5m2!1ses-419!2sar"
+                                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                                 <td>9:30 a.m.</td>
                             </tr>
                             <tr>
                                 <td>U3 and U2</td>
-                                <td>Greenbay</td>
+                                <td>Greenbay <br><iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.0106041199656!2d-87.87107574859117!3d42.32097257908737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f933bce5af881%3A0x740a7a7d548adce1!2sGreen%20Bay%20School%20(Pre-K)!5e0!3m2!1ses-419!2sar!4v1675838309785!5m2!1ses-419!2sar"
+                                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                                 <td> 1:00 p.m.</td>
                             </tr>
                             <tr>
                                 <td rowspan="2">9/08</td>
                                 <td>U5 and U6</td>
-                                <td>Howard A Yeager</td>
+                                <td>Howard A Yeager <br><iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2700626361748!2d-87.85607514859126!3d42.315438279087765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1675838229296!5m2!1ses-419!2sar"
+                                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                                 <td>9:30 a.m.</td>
                             </tr>
                             <tr>
                                 <td>U6 and U1</td>
-                                <td>Marjorie P Hart</td>
+                                <td>Marjorie P Hart <br><iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.2896536435937!2d-87.64816138505428!3d41.929626870168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses-419!2sar!4v1675705459280!5m2!1ses-419!2sar"
+                                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                                 <td>1:00 p.m.</td>
                             </tr>
                             <tr>
                                 <td rowspan="2">9/15</td>
                                 <td>U2 and U4</td>
-                                <td>North</td>
+                                <td>North <br><iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2962.9585174507765!2d-87.88349248505031!3d42.04406986299131!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fb793e8d23749%3A0xbdd4da26438cf3a0!2sNorth%20Elementary%20School!5e0!3m2!1ses-419!2sar!4v1675706204003!5m2!1ses-419!2sar"
+                                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                                 <td>9:30 a.m.</td>
                             </tr>
                             <tr>
                                 <td>U3 and U5</td>
-                                <td>AJ Katzenmaier</td>
+                                <td>AJ Katzenmaier <br><iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5899.561305062097!2d-87.862805!3d42.325877!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1675837712277!5m2!1ses-419!2sar"
+                                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                                 <td>1:00 p.m.</td>
                             </tr>
                             <tr>
                                 <td rowspan="2">9/22</td>
                                 <td>U1 and U3</td>
-                                <td>South</td>
+                                <td>South <br><iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.1937089388753!2d-87.8567870485912!3d42.31706697908756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses-419!2sar!4v1675838391669!5m2!1ses-419!2sar"
+                                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                                 <td>9:30 a.m.</td>
                             </tr>
                             <tr>
                                 <td>U2 and U6</td>
-                                <td>Howard A Yeager</td>
+                                <td>Howard A Yeager <br><iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2700626361748!2d-87.85607514859126!3d42.315438279087765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1675838229296!5m2!1ses-419!2sar"
+                                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe></iframe></td>
                                 <td>1:00 p.m.</td>
                             </tr>
                             <tr>
                                 <td>9/29</td>
                                 <td>U4 and U5</td>
-                                <td>Greenbay</td>
+                                <td>Greenbay <br><iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.0106041199656!2d-87.87107574859117!3d42.32097257908737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f933bce5af881%3A0x740a7a7d548adce1!2sGreen%20Bay%20School%20(Pre-K)!5e0!3m2!1ses-419!2sar!4v1675838309785!5m2!1ses-419!2sar"
+                                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                                 <td>9:30 a.m.</td>
                             </tr>
                         </tbody>
