--- a/index.html
+++ b/index.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style-3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
-    <header class="header">
-        <h1>Mighty Ducks Hockey League</h1>
-        <h2 class="titulo2">Upcoming Events</h2>
-        <img src="./assets/img/logo-mdhl.png" alt="Mighty Ducks Logo" class="logo">
-        <nav>
-            <ul class="lista-links">
-                <li><a href="#" class="menu pag-actual">Home</a></li>
-                <li><a href="./about.html" class="menu">About MDHL</a></li>
-                <li><a href="./contact.html" class="menu">Contact</a></li>
-                <li><a href="./game-info.html" class="menu">Games Info</a></li>
-                <li><a href="./rules.html" class="menu">Rules &amp; Policies</a></li>
-                <li><a href="./registration.html" class="menu">Registration form</a></li>
-            </ul>
-        </nav>
-    </header>
+    <body>
+        <header class="header">
+            <img src="./assets/img/logo-mdhl.png" alt="Mighty Ducks Logo" class="logo">
+            <h1>Mighty Ducks Hockey League</h1>
+            <nav>
+                <ul class="lista-links">
+                    <li><a href="./index.html" class="menu pag-actual">Home</a></li>
+                    <li><a href="./about.html" class="menu">About MDHL</a></li>
+                    <li><a href="./contact.html" class="menu">Contact</a></li>
+                    <li><a href="./game-info.html" class="menu">Games Info</a></li>
+                    <li><a href="./rules.html" class="menu">Rules &amp; Policies</a></li>
+                    <li><a href="./registration.html" class="menu">Registration</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="banner-index"></section>
     <main>
         <section>
+            <h2 class="titulo2">Upcoming Events</h2>
             <ul>
                 <li>
                     <h3>August 4</h3>
