corrección de errores/validación W3C

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <section class="banner-about"></section>
+    <div class="banner-about"></div>
     <main>
         <section>
             <h2 class="titulo2">About</h2>
