--- a/contact.html
+++ b/contact.html
@@ -24,14 +24,14 @@
             </ul>
         </nav>
     </header>
-    <section class="banner-contact"></section>
+    <div class="banner-contact"></div>
     <main>
         <section>
             <h2 class="titulo2">Contact</h2>
-            <article>
+            <div>
             <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
             <p>We reply to your email as soon as we can.</p>
-            </article>
+            </div>
         </section>
     </main>
     <footer>
