--- a/game-info.html
+++ b/game-info.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
     </header>
-    <section class="banner-info"></section>
+    <div class="banner-info"></div>
     <main>   
         <section>
             <h2 class="titulo2">Games Information</h2>
@@ -104,7 +104,7 @@
                                 <td>Howard A Yeager <br><iframe
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2700626361748!2d-87.85607514859126!3d42.315438279087765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1675838229296!5m2!1ses-419!2sar"
                                     width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                                    referrerpolicy="no-referrer-when-downgrade"></iframe></iframe></td>
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                                 <td>1:00 p.m.</td>
                             </tr>
                             <tr>
@@ -123,7 +123,7 @@
                         <li><strong>Facility Type: </strong>Outdoor</li>
                         <li><strong>Additional Information: </strong>If deemed necessary by MDHL games may be shortened or cancelled due to extreme weather conditions.</li>
                         <li><strong>Please direct all questions to: </strong>Michael Randall, League Coordinator</li>
-                        <li><strong>Phone: </strong><a href="tel:+(630) 690-8132">(630) 690-8132</a></li>
+                        <li><strong>Phone: </strong><a href="tel:+(630)690-8132">(630) 690-8132</a></li>
                         <li><strong>Email: </strong><a href="mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a></li>
                     </ul>
         </section>
