--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
-    <body>
         <header class="header">
             <img src="./assets/img/logo-mdhl.png" alt="Mighty Ducks Logo" class="logo">
             <h1>Mighty Ducks Hockey League</h1>
@@ -23,7 +22,7 @@
                 </ul>
             </nav>
         </header>
-        <section class="banner-index"></section>
+        <div class="banner-index"></div>
     <main>
         <section>
             <h2 class="titulo2">Upcoming Events</h2>
