--- a/rules.html
+++ b/rules.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
     </header>
-    <section class="banner-rules"></section>
+    <div class="banner-rules"></div>
     <main>
         <section>
             <h2 class="titulo2">Rules of Play &amp; Policies</h2>
