--- a/registration.html
+++ b/registration.html
@@ -24,7 +24,7 @@
     </header>
     <div class="banner-registration"></div>
     <main>
-        <form>
+        <form action="show_data.html" method="GET">
             <label for="first-name">Player's First Name:</label>
             <input type="text" id="first-name" name="first-name"><br><br>
         
